OpenLGTV BCM: update dropbear to 2012.55 with security fix for CVE-2012-0920 + few other config changes
git-svn-id: http://svn.openlgtv.org.ru@1052 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog.html
+++ b/OpenLGTV_BCM/trunk/Changelog.html
@@ -65,7 +65,7 @@ TODO:
     * UPDATE: OPENRELEASE upgrade to version 2.1.2-15-gf8f2743
     * UPDATE: ntfs-3g upgrade to version 2012.1.15
     * UPDATE: tmux upgrade from 1.5 to 1.6
-    * UPDATE: dropbear ssh server upgrade from 0.53.1 to 2011.54, with scp progress bar compiled in
+    * UPDATE: dropbear SSH server upgrade from 0.53.1 to 2012.55, with scp progress bar compiled in, updated paths, lowered unauth retries for DoS prevention, and security fix for CVE-2012-0920
     * CHANGE: FileManager: last_played.info file is now stored in /tmp instead of played dir location - no need to have write access to mounted shares for slideshow/dir playback
     * CHANGE: FileManager: separate file/dir icons from filenames in table to make better vertical allignment
     * CHANGE: FileManager: coloured (brown) non-local mount points (ie. mounted USB storage partitions, NFS/CIFS network shares)
